--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js localhost:3000"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express-handlebars": "^7.1.3",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
+    "mysql": "^2.18.1"
   }
 }
