--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "sqlite3": "^5.1.7"
   }
